--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+csv = "1.1"
+eyre = "0.6.8"
 reqwest = { version = "0.11.13", features = ["blocking", "json"] }
 serde = {version = "1.0.150", features = ["derive"] }
 serde_json = "1.0.89"
